--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,4 @@
-AllCops:
-  Exclude:
-    - 'bin/**/*'
-    - 'db/**/*'
-    - 'config/**/*'
-    - 'node_modules/**/*'
+require: rubocop-rails
 
 Layout/LineLength:
   Max: 120
